Essaie d'evoie d'img

--- a/VideoStream/Client.xaml
+++ b/VideoStream/Client.xaml
@@ -13,11 +13,19 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Vertical">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical">
             <TextBox x:Name="ipAddress" FontSize="16" Margin="20"/>
             <Button Content="Start client" Click="Button_Click" Margin="20"/>
         </StackPanel>
 
-        <TextBlock x:Name="feedbackText" FontSize="20" Margin="20" Grid.Row="1"/>
+        <TextBlock x:Name="feedbackText" FontSize="20" Margin="20" Grid.Row="1" Grid.Column="0"/>
+
+        <TextBlock Text="Target to send: " Grid.Row="0" Grid.Column="1" FontSize="16" VerticalAlignment="Bottom"/>
+        <Image Grid.Column="1" Grid.Row="1" Source="Assets/imgToSend.jpg"/>
     </Grid>
 </Page>
